--- a/Projekts/skati/Iestades.html
+++ b/Projekts/skati/Iestades.html
@@ -1,38 +1,41 @@
 <html>
+
 <head>
-    <style>
-           body {
-          font-family: 'Courier New', monospace;
-        }
-        .button {
-  background-color: #4CAF50;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
 
-.button1 {background-color: #4CAF50;} /* Green */
-.button2 {background-color: #008CBA;} /* Blue */
-        body {
-          font-family: 'Courier New', monospace;
-        }
-        </style>
-<title>Iestādes</title>
+  <title>Ņamma</title>
+  <link rel="icon" href="atteli/Icon.png" type="png">
+
+  <link rel="stylesheet" href="./../css/homepage.css">
+  <link rel="stylesheet" href="./../css/index.css">
 </head>
-<body style="background-color:#9999ff;">
-   
+<body>
+  <h1>Sveicināti!</h1>
 
-<h1 style="font-size:px300"><center>Ēst! Ņamma, garšīg</center></h1>
+<!-- This is text inside 2nd white box--> 
+<div>
+  <div class="box">
+  <div class="tbox">
+    <h2>Piedāvājumi</h2>
 
-<center><form>
-  <input type="button" value="Atgriezties" onclick="history.back()">
- </form></center>
+    <img class="image" src="./../picture/neveselig_ed.jpg" alt="ednica" align="left">
+    <p class="textleft" align="left">
+      <a href="#1">Picērijas Ēdnīca "PiZ"</a>
+    </p>  
+
+    <img class="image" src="./../picture/veselig_ed.jpg" alt="ednica" align="right">
+    <p class="textleft" align="left">
+      <a href="#2">Veselīgie ēdieni "VesĒ"</a>
+    </p> 
+
+    <img class="image" src="./../picture/saldo_ed.jpg" alt="ednica" align="left">
+    <p class="textleft" align="left">
+      <a href="#3">Desertu Restorans "GastrO"</a>
+    </p> 
+    
+    <a href="./../index.html">Atpakaļ!</a>
+  </div>
+  </div>
+</div>
 
 </body>
 </html>
