--- a/Projekts/skati/Iestades.html
+++ b/Projekts/skati/Iestades.html
@@ -5,8 +5,8 @@
   <title>Ņamma</title>
   <link rel="icon" href="atteli/Icon.png" type="png">
 
-  <link rel="stylesheet" href="./../css/homepage.css">
-  <link rel="stylesheet" href="./../css/index.css">
+  <link rel="stylesheet" href="./../css/Iestades.css">
+  <link rel="stylesheet" href="./../css/IestadesTP.css">
 </head>
 <body>
   <h1>Sveicināti!</h1>
