--- a/Projekts/skati/Iestades.html
+++ b/Projekts/skati/Iestades.html
@@ -17,19 +17,19 @@
   <div class="tbox">
     <h2>Piedāvājumi</h2>
 
-    <img class="image" src="./../picture/neveselig_ed.jpg" alt="ednica" align="left">
+    <img class="image" src="./../picture/klava_ed.jpg" alt="ednica" align="left">
     <p class="textleft" align="left">
-      <a href="#1">Picērijas Ēdnīca "PiZ"</a>
+      <a href="#1">KĻAVA</a>
     </p>  
 
-    <img class="image" src="./../picture/veselig_ed.jpg" alt="ednica" align="right">
+    <img class="image" src="./../picture/viesis_ed.jpg" alt="ednica" align="right">
     <p class="textleft" align="left">
-      <a href="#2">Veselīgie ēdieni "VesĒ"</a>
+      <a href="#2">Viesis</a>
     </p> 
 
-    <img class="image" src="./../picture/saldo_ed.jpg" alt="ednica" align="left">
+    <img class="image" src="./../picture/3kambari_ed.jpg" alt="ednica" align="left">
     <p class="textleft" align="left">
-      <a href="#3">Desertu Restorans "GastrO"</a>
+      <a href="#3">Trīs kambari</a>
     </p> 
     
     <a href="./../index.html">Atpakaļ!</a>
