--- a/Projekts/skati/registracija.html
+++ b/Projekts/skati/registracija.html
@@ -33,7 +33,7 @@ a.one:hover {color:#7F7FF1;}
 </head>
 <body style="background-color:#9999ff;">
 
-  <center> <img src="d:\Users\Atis\Desktop\Projekts/picture/bilde_namma.png" width="500" height="325"</center> 
+  <center> <img src="./../picture/bilde_namma.png" width="500" height="325"</center> 
   <hr class="new1">
   <br>
 <br>
