--- a/Projekts/skati/Iestades.html
+++ b/Projekts/skati/Iestades.html
@@ -5,8 +5,8 @@
   <title>Ņamma</title>
   <link rel="icon" href="atteli/Icon.png" type="png">
 
-  <link rel="stylesheet" href="./../css/Iestades.css">
-  <link rel="stylesheet" href="./../css/IestadesTP.css">
+  <link rel="stylesheet" href="./../css/iest1.css">
+  <link rel="stylesheet" href="./../css/iest2.css">
 </head>
 <body>
   <h1>Sveicināti!</h1>
@@ -17,19 +17,19 @@
   <div class="tbox">
     <h2>Piedāvājumi</h2>
 
-    <img class="image" src="./../picture/klava_ed.jpg" alt="ednica" align="left">
+    <img class="image" src="./../picture/neveselig_ed.jpg" alt="ednica" align="left">
     <p class="textleft" align="left">
-      <a href="#1">KĻAVA</a>
+      <a href="#1">Picērijas Ēdnīca "PiZ"</a>
     </p>  
 
-    <img class="image" src="./../picture/viesis_ed.jpg" alt="ednica" align="right">
+    <img class="image" src="./../picture/veselig_ed.jpg" alt="ednica" align="right">
     <p class="textleft" align="left">
-      <a href="#2">Viesis</a>
+      <a href="#2">Veselīgie ēdieni "VesĒ"</a>
     </p> 
 
-    <img class="image" src="./../picture/3kambari_ed.jpg" alt="ednica" align="left">
+    <img class="image" src="./../picture/saldo_ed.jpg" alt="ednica" align="left">
     <p class="textleft" align="left">
-      <a href="#3">Trīs kambari</a>
+      <a href="#3">Desertu Restorans "GastrO"</a>
     </p> 
     
     <a href="./../index.html">Atpakaļ!</a>
